@@ -5,13 +5,13 @@ AUX Makefile 237 RMD160 e7c5528bcf5d5d514c0ff2a58019d1570c3ba932 SHA1 497481dac4
 DIST dssp-070831cmbi.tar.gz 451919 RMD160 656e1be2c5db6150a3db2785bcaf874632b3cf27 SHA1 40ffc8fcd1400eb4675285995f1c366ff6612004 SHA256 bf5cdd970f92fd80268b87a468d4efe891d3227fd15136147889605299f75661
 DIST dssp-101007.tar.gz 541779 RMD160 aac7fb41de73b011fcbe3358c35e27e0272257af SHA1 1809b8128b4aafe77de8f2e8d68cf1ab835d4051 SHA256 2678aa0914df970c79862bf04f854eff97a23d2b6710a1b82ddcf8dec41ef37c
 EBUILD dssp-070831.ebuild 1142 RMD160 d2d236533b5a400e0460a90d16e1b8f048631a11 SHA1 40333b34be248dd935aba37d6eeed6bef7903f3a SHA256 c9ea78cecb6a2695236e27c2f0681d900fb59053093388058a6e965398ef3e71
-EBUILD dssp-101007.ebuild 1102 RMD160 876fe6b53ad58a43fd67e6316b55849f343b5891 SHA1 e13b30f9a7068f034a60822aa9274f3abf929cca SHA256 4cf081d98501d2626977e6eec2c3bdefc5be87a5cbb6fd990d34fd5cc567162b
-MISC ChangeLog 1199 RMD160 255ee1e127d89deec4603df151d9eb45ae96b16e SHA1 92ae00e196cfde1a86751e7079c86956ea132827 SHA256 f0cf8496b00638bccf91869e9122655e4c3de3d1b67bac4150ed3fbfe42be1d3
+EBUILD dssp-101007.ebuild 1111 RMD160 e74409c66f5d3c4f5b7c8b651ed685eefc9c93e7 SHA1 8aa6bd5ff667003ade3dfe8a55cd73612429a170 SHA256 c0fbd6addd2e2ea160dd26a50dcc6d54e2dca72eefdf1205cd7bf2a69c486bf3
+MISC ChangeLog 1301 RMD160 a6d0d055dd30daaee25b558491aa0c04143fd75b SHA1 f860023fa7b922e7a80310c5d2f848c1ea1fd98b SHA256 4d8238b57be1b6cf8b6ba61efb06f4fecf2f1089088062a99bd27f067db6fc57
 MISC metadata.xml 216 RMD160 04a6fc4e2160b439296b52aa97d5b7d83af75508 SHA1 9561c9e6eada6aac9b503407917900529ce703e9 SHA256 24f5c205c2655ef27138c8aa087701626f5b4c666229c9ef7fe814e63ea2e776
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAky2q7UACgkQgAnW8HDreRZMeACfQeMbYxqMc/bTlaHb7nyx+Er3
-ZQ8An1s+wKmBhjA2bD6SjYoAYNo50DEH
-=EMp1
+iEYEARECAAYFAk2lbBYACgkQgAnW8HDreRYNkwCeOTVD6fhxMmeK9337kRGogtbC
+uz8AoK0dupYXacbabz+d1eL+xR4jFATr
+=BtPH
 -----END PGP SIGNATURE-----
