@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/dssp/dssp-101007.ebuild,v 1.1 2010/10/14 07:05:20 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/dssp/dssp-101007.ebuild,v 1.2 2011/04/13 09:25:37 jlec Exp $
 
 EAPI="2"
 
@@ -20,7 +20,7 @@ RESTRICT="fetch"
 S="${WORKDIR}"/${PN}
 
 pkg_nofetch() {
-	elog "Download ftp://ftp.cmbi.ru.nl/pub/molbio/software/dsspcmbi.tar.gz --"
+	elog "Download ftp://ftp.cmbi.ru.nl/pub/molbio/software/old-dssp/dsspcmbi.tar.gz --"
 	elog "Rename it to ${A} and place it in ${DISTDIR}"
 }
 
