@@ -1,6 +1,9 @@
 # ChangeLog for sci-chemistry/dssp
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/dssp/ChangeLog,v 1.4 2010/10/14 07:05:20 jlec Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/dssp/ChangeLog,v 1.5 2011/04/13 09:25:37 jlec Exp $
+
+  13 Apr 2011; Justin Lecher <jlec@gentoo.org> dssp-101007.ebuild:
+  Fixed URL for download, #363175
 
 *dssp-101007 (14 Oct 2010)
 
